<resources>
    <string name="app_name">Dictionary</string>
    <string name="dictionary">Dictionary</string>
    <string name="categories">Categories</string>
    <string name="training">Training</string>
    <string name="profile">Profile</string>
    <string name="add_word">Add word</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="add_button">Add</string>
    <string name="empty"></string>
</resources>