<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_dictionary"
        android:title="@string/dictionary"
        android:icon="@drawable/ic_dictionary_picture"/>
    <item android:id="@+id/menu_categories"
        android:title="@string/categories"
        android:icon="@drawable/ic_navigation_categories"/>
    <item android:id="@+id/menu_add_word"
        android:title="@string/add_word"
        android:icon="@drawable/ic_add_button_2"/>
    <item android:id="@+id/menu_training"
        android:title="@string/training"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_launcher_foreground"/>
</menu>