<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.lithium.kotlin.dictionary.presentation.dictionary.screen.dictionaryRV.WordViewModel" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_word_icon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            app:srcCompat="@drawable/ic_empty_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/word" />

            <EditText
                android:id="@+id/word_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/translation" />

    <EditText
        android:id="@+id/translation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_marginStart="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/translation_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"  />

    <TextView
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/categories" />

    <EditText
        android:id="@+id/categories_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_marginStart="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add_button" />
</LinearLayout>
</layout>